--- a/src/app/ui/styles/header.css
+++ b/src/app/ui/styles/header.css
@@ -84,7 +84,7 @@
   .about-header {
     width: 100%;
     position: absolute;
-    top: -4em;
+    top: 0;
     left: 0;
   }
 }
